// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/MUIcon Base 1`] = `
<MUIcon
  type="face"
>
  <WithStyles(MUIconComp)
    innerRef={null}
    jssContext={
      Object {
        "classNamePrefix": "",
        "disableStylesGeneration": false,
      }
    }
    theme={Object {}}
    type="face"
  >
    <MUIconComp
      classes={
        Object {
          "root": "MUIconComp-root-0-3-35 MUIconComp-root-d50-0-3-182",
        }
      }
      type="face"
    >
      <i
        className="MUIconComp-root-0-3-35 MUIconComp-root-d50-0-3-182"
      >
        face
      </i>
    </MUIconComp>
  </WithStyles(MUIconComp)>
</MUIcon>
`;

exports[`Storyshots Components/MUIcon color 1`] = `
<MUIcon
  color="#03a9f4"
  type="face"
>
  <WithStyles(MUIconComp)
    color="#03a9f4"
    innerRef={null}
    jssContext={
      Object {
        "classNamePrefix": "",
        "disableStylesGeneration": false,
      }
    }
    theme={Object {}}
    type="face"
  >
    <MUIconComp
      classes={
        Object {
          "root": "MUIconComp-root-0-3-35 MUIconComp-root-d52-0-3-184",
        }
      }
      color="#03a9f4"
      type="face"
    >
      <i
        className="MUIconComp-root-0-3-35 MUIconComp-root-d52-0-3-184"
      >
        face
      </i>
    </MUIconComp>
  </WithStyles(MUIconComp)>
</MUIcon>
`;

exports[`Storyshots Components/MUIcon fontSize 1`] = `
<MUIcon
  fontSize={48}
  type="face"
>
  <WithStyles(MUIconComp)
    fontSize={48}
    innerRef={null}
    jssContext={
      Object {
        "classNamePrefix": "",
        "disableStylesGeneration": false,
      }
    }
    theme={Object {}}
    type="face"
  >
    <MUIconComp
      classes={
        Object {
          "root": "MUIconComp-root-0-3-35 MUIconComp-root-d51-0-3-183",
        }
      }
      fontSize={48}
      type="face"
    >
      <i
        className="MUIconComp-root-0-3-35 MUIconComp-root-d51-0-3-183"
      >
        face
      </i>
    </MUIconComp>
  </WithStyles(MUIconComp)>
</MUIcon>
`;
